# qmk-hid

./: Cargo.toml  README.md
.github/workflows/: ci.yml
demo/: host.js
src/: cli.rs  constants.rs  lib.rs  main.rs  messenger.rs
